<?xml version="1.0"?>
<package format="2">
  <name>pde_formation_control</name>
  <version>0.1.0</version>
  <description>
    Implementation of multi-agent formation control based on higher-order PDEs
    as described in "Formation Control of Multiagent System Based on Higher Order
    Partial Differential Equations" by Yamaguchi et al.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  
  <export>
  </export>
</package>